# C-Programmierkurs-Material-SS20

./: CMakeLists.txt  README.md
1. Teil - Grundlagen/: 00HalloWelt.c  01Bildschirmausgabe.c  02Kommentare.c  03Datentypen.c  04Kontrollfluss.c  05Schleifen.c  06Adressoperator.c  07Benutzereingaben.c  08Arrays.c  09Strings.c  10Funktionen.c  11Programmstruktur.c  11Programmstruktur.h  11main.c  rateMeineZahl.c
2. Teil - Speicherverwaltung/: 12Pointer.c  13Strukturen.c  14multidimArrays.c  15dynAlloz.c
3. Teil - Nebenläufigkeit/: 16Threads.c
