cmake_minimum_required(VERSION 3.15)
project(C-Programmierkurs-fuer-Studentinnen)

set(CMAKE_C_STANDARD 11)

add_executable(00HalloWelt "1. Teil - Grundlagen/00HalloWelt.c" "1. Teil - Grundlagen/11Programmstruktur.c" "1. Teil - Grundlagen/11Programmstruktur.h" "2. Teil - Speicherverwaltung/12Pointer.c" "2. Teil - Speicherverwaltung/13Strukturen.c" "2. Teil - Speicherverwaltung/14multidimArrays.c" "2. Teil - Speicherverwaltung/15dynAlloz.c" "3. Teil - Nebenläufigkeit/16Threads.c")
add_executable(01Bildschirmausagbe "1. Teil - Grundlagen/01Bildschirmausgabe.c")
add_executable(02Kommentare "1. Teil - Grundlagen/02Kommentare.c")
add_executable(03Datentypen "1. Teil - Grundlagen/03Datentypen.c")
add_executable(04Kontrollfluss "1. Teil - Grundlagen/04Kontrollfluss.c")
add_executable(05Schleifen "1. Teil - Grundlagen/05Schleifen.c")
add_executable(06Adressoperator "1. Teil - Grundlagen/06Adressoperator.c")
add_executable(07Benutzereingaben "1. Teil - Grundlagen/07Benutzereingaben.c")
add_executable(08Arrays "1. Teil - Grundlagen/08Arrays.c")
add_executable(09Strings "1. Teil - Grundlagen/09Strings.c")
add_executable(rateMeineZahl "1. Teil - Grundlagen/rateMeineZahl.c")
target_link_libraries(rateMeineZahl m)
add_executable(10Funktionen "1. Teil - Grundlagen/10Funktionen.c")
add_executable(11Main "1. Teil - Grundlagen/11main.c")
add_executable(12Pointer "2. Teil - Speicherverwaltung/12Pointer.c")
add_executable(13Strukturen "2. Teil - Speicherverwaltung/13Strukturen.c")
add_executable(14multidimArrays "2. Teil - Speicherverwaltung/14multidimArrays.c")
add_executable(15dynAlloz "2. Teil - Speicherverwaltung/15dynAlloz.c")
add_executable(16Threads "3. Teil - Nebenläufigkeit/16Threads.c")
target_link_libraries(16Threads pthread)

